[package]
name = "kubizone-cloudflare"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["rustls-tls", "json"] }

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"

# Kubernetes
kubizone-crds = "0.12.4"
kubizone-common = "0.13.2"
kube = { version = "0.92.0", default-features = false, features = [
    "derive",
    "rustls-tls",
    "client",
    "runtime",
] }
k8s-openapi = { version = "0.22.0" }

# Async
tokio = { version = "1.33", features = ["macros", "rt"] }
futures = "0.3"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Parsing
serde_json = { version = "1.0.117" }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"

[features]
default = ["dev"]
dev = ["kubizone-crds/dev"]
